# Numstore-python

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  compile_commands.json  pynumstore.c  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: cibuildwheel.yml
cmake/: FindNumpy.cmake  FindNumstore.cmake
pynumstore/: __init__.py  _pynumstore.pyi
samples/: sample_1_basic_operations.py  sample_2_transactions.py  sample_3_multiple_variables.py  sample_4_overwriting.py  sample_5_close_reopen.py
tests/: disabled_test_data_pbt.py  disabled_test_var_pbt.py  test_data.py  test_dtype_to_nstype.py  test_regressions.py  test_var.py
